2011-10-20  Mark Hahnenberg  <mhahnenberg@apple.com>

        Rename static deleteProperty to deletePropertyByIndex
        https://bugs.webkit.org/show_bug.cgi?id=70257

        Reviewed by Geoffrey Garen.

        Renaming versions of deleteProperty that use an unsigned as the property
        name to "deletePropertyByIndex" in preparation for adding them to the 
        MethodTable, which requires unique names for each method.

        * WebProcess/Plugins/Netscape/JSNPObject.cpp:
        (WebKit::JSNPObject::deletePropertyVirtual):
        (WebKit::JSNPObject::deletePropertyByIndex):
        * WebProcess/Plugins/Netscape/JSNPObject.h:

2011-10-20  Carlos Garcia Campos  <cgarcia@igalia.com>

        [GTK] Remove WebKitWebLoaderClientPrivate
        https://bugs.webkit.org/show_bug.cgi?id=70488

        Reviewed by Philippe Normand.

        It's unused since r97920.

        * GNUmakefile.am: Add WebKitWebLoaderClientPrivate.h.
        * UIProcess/API/gtk/WebKitWebLoaderClient.cpp:
        (webkitWebLoaderClientAttachLoaderClientToPage): Renamed to make
        it clear it's a private method of WebKitWebLoaderClient.
        (webkit_web_loader_client_init): Remove
        WebKitWebLoaderClientPrivate initialization.
        (webkit_web_loader_client_class_init): Removed adding
        WebKitWebLoaderClientPrivate struct as private data.
        * UIProcess/API/gtk/WebKitWebLoaderClient.h: Remove
        WebKitWebLoaderClientPrivate definition.
        * UIProcess/API/gtk/WebKitWebLoaderClientPrivate.h: Move
        webkitWebLoaderClientAttachLoaderClientToPage method here since
        it's a private method implemented in WebKitWebLoaderClient, not in
        WebKitWebView.
        * UIProcess/API/gtk/WebKitWebView.cpp:
        (webkit_web_view_set_loader_client): Use
        webkitWebLoaderClientAttachLoaderClientToPage.
        * UIProcess/API/gtk/WebKitWebViewPrivate.h: Remove
        webkitWebLoaderClientAttachLoaderClientToPage prototype.
